--- a/DATAVIEW/WebContent/Style/loginMenu.css
+++ b/DATAVIEW/WebContent/Style/loginMenu.css
@@ -35,5 +35,13 @@
   display: block;
 }
 
+.dropdown-content p {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  cursor: pointer;
+}
+
 .dropdown:hover .dropdown-content {display: flex;}
 
