--- a/DATAVIEW/WebContent/Style/menu.css
+++ b/DATAVIEW/WebContent/Style/menu.css
@@ -52,6 +52,13 @@
   text-decoration: none;
   display: block;
 }
+.dropdown-content p {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  cursor: pointer;
+}
 
 .dropdown:hover .dropdown-content {display: flex;}
 
