--- a/DATAVIEW/WebContent/Style/loginMenu.css
+++ b/DATAVIEW/WebContent/Style/loginMenu.css
@@ -21,7 +21,7 @@
   background-color: white;
   font-weight: bold;
   position: absolute;
-  min-width: 100px;
+  min-width: 200px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
   flex-direction: column;
@@ -45,3 +45,15 @@
 
 .dropdown:hover .dropdown-content {display: flex;}
 
+
+.profile:hover{
+	box-shadow: 0 0 11px rgba(33,33,33,.2);
+}
+
+.webench:hover{
+	box-shadow: 0 0 11px rgba(33,33,33,.2);
+}
+
+.logout:hover{
+	box-shadow: 0 0 11px rgba(33,33,33,.2);
+}
