--- a/DATAVIEW/WebContent/Style/menu.css
+++ b/DATAVIEW/WebContent/Style/menu.css
@@ -3,6 +3,8 @@
 .menuContainer{
 	display: flex;
 	justify-content: flex-end;
+	font-family: Tahoma, Geneva, sans-serif;
+  	font-size: 14px;
 }
 
 .menuItems {
@@ -39,11 +41,12 @@
   background-color: white;
   font-weight: bold;
   position: absolute;
-  min-width: 100px;
+  min-width: 200px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
   flex-direction: column;
   margin-top: 30px;
+  
 }
 
 .dropdown-content a {
@@ -60,5 +63,22 @@
   cursor: pointer;
 }
 
+.webench{
+	margin-top:0px;
+	margin-bottom:0px;
+}
+
 .dropdown:hover .dropdown-content {display: flex;}
+
+.profile:hover{
+	box-shadow: 0 0 11px rgba(33,33,33,.2);
+}
+
+.webench:hover{
+	box-shadow: 0 0 11px rgba(33,33,33,.2);
+}
+
+.logout:hover{
+	box-shadow: 0 0 11px rgba(33,33,33,.2);
+}
 
